--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img class="d-inline-block align-top" width="160" height="50" src="./img/covid19logo.jpg"></a>
+        <a class="navbar-brand" href="index.html"><img class="d-inline-block align-top" width="160" height="50" src="./img/covid19logo.jpg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link middle" href="index.html">Home</a>
-                <a class="nav-item nav-link middle" href="#">Dashboard</a>
+                <a class="nav-item nav-link middle" href="dashboard.html">Dashboard</a>
                 <a class="nav-item nav-link middle" href="#">Department Login</a>
                 <a class="nav-item nav-link middle" href="#">Vaccinator</a>
                 <a class="nav-item nav-link middle" href="#">Verify Certificate</a>
@@ -80,7 +80,7 @@
                         <h6>Select your nearby Vaccine Center for vaccination</h6>
                     </div>
                 </div>
-                <div class="col-sm-6 procedureitems" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-quad">
+                <div class="col-sm-6 procedureitems" data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-quad">
                     <h4>CHOOSE VACCINE LOCATION</h4>
                 </div>
             </div>
@@ -121,13 +121,6 @@
             <div class="col-sm-1"></div>
         </div>
     </div>
-
-
-
-
-
-
-
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -136,12 +129,6 @@
     <script>
         AOS.init();
     </script>
-    <!-- <script>
-        function center() {
-            var img = document.getElementById('p551');
-            img.style.display = img.style.display = 'block';
-        }
-    </script> -->
 </body>
 
 </html>
