--- a/dashboard.html
+++ b/dashboard.html
@@ -443,6 +443,18 @@
             <div class="col-sm-1"></div>
         </div>
     </div>
+    <div class="dsection3">
+        <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+                <div class="text-center">
+                    <label class="label label-success">Area Chart</label>
+                    <div id="area-chart"></div>
+                </div>
+            </div>
+            <div class="col-sm-1"></div>
+        </div>
+    </div>
 
 
 
@@ -500,6 +512,68 @@
             var chart = new google.visualization.PieChart(document.getElementById('piechart1'));
             chart.draw(data, options);
         }
+    </script>
+    <script>
+        var data = [{
+                y: '2014',
+                a: 50,
+                b: 90
+            }, {
+                y: '2015',
+                a: 65,
+                b: 75
+            }, {
+                y: '2016',
+                a: 50,
+                b: 50
+            }, {
+                y: '2017',
+                a: 75,
+                b: 60
+            }, {
+                y: '2018',
+                a: 80,
+                b: 65
+            }, {
+                y: '2019',
+                a: 90,
+                b: 70
+            }, {
+                y: '2020',
+                a: 100,
+                b: 75
+            }, {
+                y: '2021',
+                a: 115,
+                b: 75
+            }, {
+                y: '2022',
+                a: 120,
+                b: 85
+            }, {
+                y: '2023',
+                a: 145,
+                b: 85
+            }, {
+                y: '2024',
+                a: 160,
+                b: 95
+            }],
+            config = {
+                data: data,
+                xkey: 'y',
+                ykeys: ['a', 'b'],
+                labels: ['Total Income', 'Total Outcome'],
+                fillOpacity: 0.6,
+                hideHover: 'auto',
+                behaveLikeLine: true,
+                resize: true,
+                pointFillColors: ['#ffffff'],
+                pointStrokeColors: ['black'],
+                lineColors: ['gray', 'red']
+            };
+        config.element = 'area-chart';
+        Morris.Area(config);
     </script>
 </body>
 
