--- a/dashboard.html
+++ b/dashboard.html
@@ -10,8 +10,9 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="./img/add.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
-    <title>CoWin</title>
+    <title>CoWin-Dashboard</title>
 </head>
 
 <body>
@@ -23,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link middle" href="index.html">Home</a>
-                <a class="nav-item nav-link middle" href="#">Dashboard</a>
-                <a class="nav-item nav-link middle" href="#">Department Login</a>
-                <a class="nav-item nav-link middle" href="#">Vaccinator</a>
-                <a class="nav-item nav-link middle" href="#">Verify Certificate</a>
+                <a class="nav-item nav-link middle" href="dashboard.html">Dashboard</a>
+                <a class="nav-item nav-link middle" href="departmentlogin.html">Department Login</a>
+                <a class="nav-item nav-link middle" href="vaccinator.html">Vaccinator</a>
+                <a class="nav-item nav-link middle" href="verify.html">Verify Certificate</a>
             </div>
         </div>
     </nav>
