--- a/verify.html
+++ b/verify.html
@@ -79,6 +79,24 @@
         </div>
         <div class="col-1"></div>
     </div>
+    <footer>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-sm-5 left">
+                <h5 class="number">Our Partners</h6>
+                    <img class="partnersimg" src="./img/aarogya_logo.png">
+                    <img class="partnersimg" src="./img/DigiLocker_logo.png">
+                    <img class="partnersimgb" src="./img/umang-logo-v1.png">
+                    <img class="partnersimgb" src="./img/csclogo.jpeg">
+            </div>
+            <div class="col-sm-5 right">
+                <br><br>
+                <h6 class="number">Helpline number: <a href="tel:+911123978046">+91-11-23978046</a></h6>
+                <h6 class="number">Toll free: <a href="tel:1075">1075</a></h6>
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </footer>
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
